<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="10dp">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:id="@+id/filterSearchLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Search"
        app:startIconDrawable="@drawable/ic_search"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/filterSearchEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:inputType="textFilter"
            android:imeOptions="actionSearch"/>

    </com.google.android.material.textfield.TextInputLayout>

    <HorizontalScrollView
        android:id="@+id/searchRowLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        app:singleSelection="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingHorizontal="8dp"
                android:gravity="center_vertical"
                android:text="Search For:"
                android:textSize="15sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/searchReason"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:minHeight="32dp"
                android:minWidth="32dp"
                android:paddingHorizontal="15dp"
                android:paddingVertical="5dp"
                android:gravity="center"
                app:toggleCheckedStateOnClick="false"
                android:text="Reason"
                android:textSize="14sp"
                android:checkable="true" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/searchUser"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:minHeight="32dp"
                android:minWidth="32dp"
                android:paddingHorizontal="15dp"
                android:paddingVertical="5dp"
                android:gravity="center"
                android:text="Users"
                app:toggleCheckedStateOnClick="false"
                android:textSize="14sp"
                android:checkable="true" />
        </LinearLayout>
    </HorizontalScrollView>

    <HorizontalScrollView
        android:id="@+id/filterButtonsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:padding="5dp"
        android:background="@drawable/black_border"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:scrollbars="none">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/filterCountAndEdit"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:minHeight="32dp"
                android:minWidth="32dp"
                android:paddingHorizontal="15dp"
                android:paddingVertical="5dp"
                android:gravity="center_vertical"
                android:text="0"
                android:textSize="14sp"
                android:checkable="true"
                app:icon="@drawable/ic_filter_list"
                app:iconGravity="textStart"
                app:iconPadding="2dp"
                app:cornerRadius="12dp"
                app:toggleCheckedStateOnClick="true" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_margin="6dp"
                android:gravity="center_vertical"
                android:background="@drawable/left_border"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingHorizontal="8dp"
                android:gravity="center_vertical"
                android:text="Filtering By:"
                android:textSize="15sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/filter_timeRange"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:minHeight="32dp"
                android:minWidth="32dp"
                android:paddingHorizontal="15dp"
                android:paddingVertical="5dp"
                android:gravity="center_vertical"
                android:text="Date Posted"
                android:textSize="14sp"
                android:checkable="true"
                app:icon="@drawable/menu_click"
                app:iconGravity="textEnd"
                app:cornerRadius="12dp"
                app:toggleCheckedStateOnClick="true" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/filter_emotion"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:minHeight="32dp"
                android:minWidth="32dp"
                android:paddingHorizontal="15dp"
                android:paddingVertical="5dp"
                android:gravity="center_vertical"
                android:text="Emotion"
                android:textSize="14sp"
                android:checkable="true"
                app:icon="@drawable/menu_click"
                app:iconGravity="textEnd"
                app:cornerRadius="12dp"
                app:toggleCheckedStateOnClick="true" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/filter_location"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:minHeight="32dp"
                android:minWidth="32dp"
                android:paddingHorizontal="15dp"
                android:paddingVertical="5dp"
                android:gravity="center_vertical"
                android:text="Location"
                android:textSize="14sp"
                android:checkable="true"
                app:icon="@drawable/menu_click"
                app:iconGravity="textEnd"
                app:cornerRadius="12dp"
                app:toggleCheckedStateOnClick="true" />

        </LinearLayout>
    </HorizontalScrollView>
</LinearLayout>
